# Graphical-Models-Modelling

./: .clang-format  .gitignore  CMakeLists.txt  flex.py
src/: main.py
src/libs/: distibutions.py  math.py  statistics.py
src/libs/statistics/: base.py  kendall.py  pearson.py
